Switched bcrypt algorithm to upash + argon2  algorithm. Deleted the part that checks if a password was already hashed with bcrypt. Some tests are now failing.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/scoutforpets/objection-password#readme",
   "dependencies": {
-    "bcrypt": "^1.0.2"
+    "@phc/argon2": "^1.0.9",
+    "upash": "^1.0.2"
   },
   "devDependencies": {
     "ava": "^0.25.0",
